Add test of the cosine function

--- a/analysis_of_dwnn.ipynb
+++ b/analysis_of_dwnn.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1157,10 +1157,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A matrix: 2 × 2 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>m</th><th scope=col></th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1</td><td>-1</td></tr>\n",
+       "\t<tr><td>-1</td><td> 1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 2 of type dbl\n",
+       "\\begin{tabular}{ll}\n",
+       " m & \\\\\n",
+       "\\hline\n",
+       "\t  1 & -1\\\\\n",
+       "\t -1 &  1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 2 of type dbl\n",
+       "\n",
+       "| m | <!----> |\n",
+       "|---|---|\n",
+       "|  1 | -1 |\n",
+       "| -1 |  1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     m    \n",
+       "[1,]  1 -1\n",
+       "[2,] -1  1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m = c(1, 1, 1)\n",
+    "m = rbind(m, c(-1, -1, -1))\n",
+    "\n",
+    "query = c(0, 0, 0)\n",
+    "\n",
+    "diff = query - m\n",
+    "cos = cosine(diff, diff)\n",
+    "cos"
+   ]
   }
  ],
  "metadata": {
